fix wrong font type applied to fat tabs content

--- a/static/jQueryUI/partials/theme/_component-containers.scss
+++ b/static/jQueryUI/partials/theme/_component-containers.scss
@@ -1,7 +1,7 @@
 /* Component containers
 ----------------------------------*/
 
-.ui-widget {
+/*.ui-widget {
   font-family: museo-sans-for-dell-300,Lucida Grande,Lucida Sans,Arial,sans-serif;
   font-size: 1em; //Original - 1.1em
   .ui-widget {
@@ -11,7 +11,7 @@
     font-family: museo-sans-for-dell-300,Lucida Grande,Lucida Sans,Arial,sans-serif;
     font-size: 1em;
   }
-}
+}*/
 
 .ui-widget-content {
   //Original - border: 1px solid #a6c9e2;
